--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,22 @@
+html, body, #root{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
     background-color: #000;
     color: #fff;
     margin: 20px;
+}
+
+#root{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main{
+    flex: 1;
 }
