--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -6,18 +6,18 @@ $white: #fff;
   margin-bottom: 40px;
 }
 
-.title {
+.carousel__title {
   color: $white;
   margin-bottom: 10px;
   font-size: 22px;
   font-weight: 700;
 }
 
-.wrapper {
+.carousel__wrapper {
   position: relative;
 }
 
-.track {
+.carousel__track {
   display: flex;
   overflow-x: auto;
   gap: 20px;
@@ -25,7 +25,7 @@ $white: #fff;
   scroll-behavior: smooth;
 }
 
-.arrow {
+.carousel__arrow {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -50,10 +50,10 @@ $white: #fff;
   }
 }
 
-.left {
+.carousel__arrow-left {
   left: 0;
 }
 
-.right {
+.carousel__arrow-right {
   right: 0;
 }
