--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,17 +2,17 @@
     padding: 0 32px;
 }
 
-.intro{
+.home__intro{
     margin-bottom: 60px;
 }
 
-.title{
+.home__title{
     font-size: 42px;
     color: white;
     margin-bottom: 16px;
 }
 
-.subtitle{
+.home__subtitle{
     font-size: 18px;
     color: #ccc;
 }
