--- a/src/components/MovieCard/MovieCard.module.scss
+++ b/src/components/MovieCard/MovieCard.module.scss
@@ -2,7 +2,7 @@ $black: #000;
 $orange: #ff7a00;
 $white: #fff;
 
-.card {
+.movie-card {
   position: relative;
 
   min-width: 150px;
@@ -31,7 +31,7 @@ $white: #fff;
   }
 }
 
-.title {
+.movie-card__title {
   position: relative;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
   padding: 40px 12px 12px;
@@ -42,7 +42,7 @@ $white: #fff;
   z-index: 2;
 }
 
-.image{
+.movie-card__image{
   width: 100%;
   height: 100%;
   object-fit: cover;
