fix(home_error): add error handling to movie loading

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -16,3 +16,10 @@
     font-size: 18px;
     color: #ccc;
 }
+
+.home__error {
+    color: #ff4d4f;
+    font-size: 1.2rem;
+    margin: 20px 0;
+    text-align: center;
+}
