--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,9 @@ $white: #fff;
     display: flex;
     align-items: center;
     gap: 10px;
+    text-decoration: none;
+    color: $white;
+    cursor: pointer;
 }
 
 .header__image{
